--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <aside>
                 <h3>lateral</h3>
-                <p>leonardo william lindo e perfeito muito muito gostoso</p>
+                <p>leonardo william lindo e perfeito muito  gostoso</p>
             </aside>
             
         </section>
